blade/bookinfo/base/gedemo/delegation/bookinfo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: demo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - bookinfo.jad.solo.io
    routes:
      - matchers:
          - prefix: /
# ------------- Delegation by label selector --------------
        delegateAction:
          selector:
            namespaces:
              - team1
            labels:
              application-owner: team1
# ---------------------------------------------------------
